rke2.d/alcide/master/catalog/mesh/headplane/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata: # kpt-merge: /${headplane-namespace}
  name: ${headplane-namespace} # kpt-set: ${headplane-namespace}
  annotations:
    internal.kpt.dev/upstream-identifier: '|Namespace|default|${headplane-namespace}'
